test/pow2.slq
def main(){
	b:=1:𝔹;
	s:=1:int[16];
	u:=2:uint[16];
	sc:=1:!int[16];
	uc:=2:uint[16];
	bc:=1:!𝔹;
	n:=3:!ℕ;
	z:=-3:!ℤ;
	q:=1/2:!ℚ;
	r:=4.5:!ℝ;
	// c:=0:!ℂ;

	bpb:=b^b:𝔹;
	(b^b):=bpb;
	bps:=b^s; // error
	(b^s):=bps; // error
	bpu:=b^u; // error
	(b^u):=bpu; // error
	bpsc:=b^sc; // error
	(b^sc):=bpsc; // error
	bpuc:=b^uc; // error
	(b^uc):=bpuc; // error
	bpbc:=b^bc:𝔹;
	(b^bc):=bpbc;
	bpn:=b^n:𝔹;
	(b^n):=bpn;
	bpz:=b^z; // error
	(b^z):=bpz; // error
	bpq:=b^q; // error
	(b^q):=bpq; // error
	bpr:=b^r; // error
	(b^r):=bpr; // error
	spb:=s^b; // error
	(s^b):=spb; // error
	sps:=s^s; // error
	(s^s):=sps; // error
	spu:=s^u; // error
	(s^u):=spu; /// error
	spsc:=s^sc; // error
	(s^sc):=spsc; // error
	spuc:=s^uc; // error
	(s^uc):=spuc; // error
	spbc:=s^bc; // error
	(s^bc):=spbc; // error
	spn:=s^n; // error
	(s^n):=spn; // error
	spz:=s^z; // error
	(s^z):=spz; // error
	spq:=s^q; // error
	(s^q):=spq; // error
	spr:=s^r; // error
	(s^r):=spr; // error
	upb:=u^b; // error
	(u^b):=upb; // error
	ups:=u^s; // error
	(u^s):=ups; // error
	upu:=u^u; // error
	(u^u):=upu; // error
	upsc:=u^sc; // error
	(u^sc):=upsc; // error
	upuc:=u^uc; // error
	(u^uc):=upuc; // error
	upbc:=u^bc; // error
	(u^bc):=upbc; // error
	upn:=u^n; // error
	(u^n):=upn; // error
	upz:=u^z; // error
	(u^z):=upz; // error
	upq:=u^q; // error
	(u^q):=upq; // error
	upr:=u^r; // error
	(u^r):=upr; // error
	scpb:=sc^b; // error
	(sc^b):=scpb; // error
	scps:=sc^s; // error
	(sc^s):=scps; // error
	scpu:=sc^u; // error
	(sc^u):=scpu; // error
	scpsc:=sc^sc; // error
	(sc^sc):=scpsc; // error
	scpuc:=sc^uc; // error
	(sc^uc):=scpuc; // error
	scpbc:=sc^bc; // error
	(sc^bc):=scpbc; // error
	scpn:=sc^n; // error
	(sc^n):=scpn; // error
	scpz:=sc^z; // error
	(sc^z):=scpz; // error
	scpq:=sc^q; // error
	(sc^q):=scpq; // error
	scpr:=sc^r; // error
	(sc^r):=scpr; // error
	ucpb:=uc^b; // error
	(uc^b):=ucpb; // error
	ucps:=uc^s; // error
	(uc^s):=ucps; // error
	ucpu:=uc^u; // error
	(uc^u):=ucpu; // error
	ucpsc:=uc^sc; // error
	(uc^sc):=ucpsc; // error
	ucpuc:=uc^uc; // error
	(uc^uc):=ucpuc; // error
	ucpbc:=uc^bc; // error
	(uc^bc):=ucpbc; // error
	ucpn:=uc^n; // error
	(uc^n):=ucpn; // error
	ucpz:=uc^z; // error
	(uc^z):=ucpz; // error
	ucpq:=uc^q; // error
	(uc^q):=ucpq; // error
	ucpr:=uc^r; // error
	(uc^r):=ucpr; // error
	bcpb:=bc^b:𝔹;
	(bc^b):=bcpb:𝔹;
	bcps:=bc^s; // error
	(bc^s):=bcps; // error
	bcpu:=bc^u; // error
	(bc^u):=bcpu; // error
	bcpsc:=bc^sc; // error
	(bc^sc):=bcpsc; // error
	bcpuc:=bc^uc; // error
	(bc^uc):=bcpuc; // error
	bcpbc:=bc^bc:!𝔹;
	(bc^bc):=bcpbc;
	bcpn:=bc^n:!𝔹;
	(bc^n):=bcpn;
	bcpz:=bc^z:!ℚ;
	(bc^z):=bcpz;
	bcpq:=bc^q:!ℝ;
	(bc^q):=bcpq;
	bcpr:=bc^r:!ℝ;
	(bc^r):=bcpr;
	npb:=n^b; // error
	(n^b):=npb; // error
	nps:=n^s; // error
	(n^s):=nps; // error
	npu:=n^u; // error
	(n^u):=npu; // error
	npsc:=n^sc; // error
	(n^sc):=npsc; // error
	npuc:=n^uc; // error
	(n^uc):=npuc; // error
	npbc:=n^bc:!ℕ;
	(n^bc):=npbc;
	npn:=n^n:!ℕ;
	(n^n):=npn;
	npz:=n^z:!ℚ;
	(n^z):=npz;
	npq:=n^q:!ℝ;
	(n^q):=npq;
	npr:=n^r:!ℝ;
	(n^r):=npr;
	zpb:=z^b; // error
	(z^b):=zpb; // error
	zps:=z^s; // error
	(z^s):=zps; // error
	zpu:=z^u; // error
	(z^u):=zpu; // error
	zpsc:=z^sc; // error
	(z^sc):=zpsc; // error
	zpuc:=z^uc; // error
	(z^uc):=zpuc; // error
	zpbc:=z^bc:!ℤ;
	(z^bc):=zpbc;
	zpn:=z^n:!ℤ;
	(z^n):=zpn;
	zpz:=z^z:!ℚ;
	(z^z):=zpz;
	zpq:=z^q:!ℝ;
	(z^q):=zpq;
	zpr:=z^r:!ℝ;
	(z^r):=zpr;
	qpb:=q^b; // error
	(q^b):=qpb; // error
	qps:=q^s; // error
	(q^s):=qps; // error
	qpu:=q^u; // error
	(q^u):=qpu; // error
	qpsc:=q^sc; // error
	(q^sc):=qpsc; // error
	qpuc:=q^uc; // error
	(q^uc):=qpuc; // error
	qpbc:=q^bc:!ℚ;
	(q^bc):=qpbc;
	qpn:=q^n:!ℚ;
	(q^n):=qpn;
	qpz:=q^z:!ℚ;
	(q^z):=qpz;
	qpq:=q^q:!ℝ;
	(q^q):=qpq;
	qpr:=q^r:!ℝ;
	(q^r):=qpr;
	rpb:=r^b; // error
	(r^b):=rpb; // error
	rps:=r^s; // error
	(r^s):=rps; // error
	rpu:=r^u; // error
	(r^u):=rpu; // error
	rpsc:=r^sc; // error
	(r^sc):=rpsc; // error
	rpuc:=r^uc; // error
	(r^uc):=rpuc; // error
	rpbc:=r^bc:!ℝ;
	(r^bc):=rpbc;
	rpn:=r^n:!ℝ;
	(r^n):=rpn;
	rpz:=r^z:!ℝ;
	(r^z):=rpz;
	rpq:=r^q:!ℝ;
	(r^q):=rpq;
	rpr:=r^r:!ℝ;
	(r^r):=rpr;
}
